# ChangeLog for sys-devel/gcc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gcc-4.4.3-r2 (11 Apr 2010)

  11 Apr 2010; <zorry@gentoo.org> +gcc-4.4.3-r2.ebuild:
  The espf patchset updated to 0.3.8

*gcc-4.4.3-r1 (10 Feb 2010)

  10 Feb 2010; <zorry@gentoo.org> +gcc-4.4.3-r1.ebuild:
  New GCC version

*gcc-4.4.2-r2 (27 Dec 2009)

  27 Dec 2009; <zorry@gentoo.org> +gcc-4.4.2-r2.ebuild:
  Bump to support ia64 with new espf-0.3.6 patchest thanks to devurandom.

*gcc-4.4.2-r1 (18 Oct 2009)

  18 Oct 2009; Magnus Granberg <zorry@ume.nu> +gcc-4.4.2-r1.ebuild:
  New GCC added (GCC 4.4.2)

  01 Oct 2009; Magnus Granberg <zorry@ume.nu> gcc-4.3.4-r2.ebuild:
  Did't update the ESPF and SPECS. Thanks cilly for the note.

*gcc-4.3.4-r2 (29 Sep 2009)

  29 Sep 2009; Magnus Granberg <zorry@ume.nu> +gcc-4.3.4-r2.ebuild:
  New espf 0.3.5 and specs 0.1.7 for gcc 4.3.4

*gcc-4.4.1-r2 (27 Sep 2009)

  27 Sep 2009; Magnus Granberg <zorry@ume.nu> +gcc-4.4.1-r2.ebuild:
  New espf-0.3.5 and specs-0.1.7

  24 Sep 2009; Peter Hjalmarsson <xake@gentoo.org> gcc-4.3.4-r1.ebuild,
  gcc-4.4.1-r1.ebuild:
  License updated, deps bumped, Vapier usually has a point.

*gcc-4.4.1-r1 (21 Sep 2009)

  20 Sep 2009; Magnus Granberg <zorry@ume.nu> gcc-4.3.4-r1.ebuild,
  +gcc-4.4.1-r1.ebuild, -gcc-4.4.1-r2.ebuild, -gcc-4.4.1-r3.ebuild:
  Updated espf patchset to 0.3.4 and specs to 0.1.6. Added crtbeginTS.o
  support.

*gcc-4.4.1-r3 (20 Sep 2009)

  20 Sep 2009; Magnus Granberg <zorry@ume.nu> +gcc-4.4.1-r3.ebuild,
  +metadata.xml:
  Update espf to 0.3.4 and specs to 0.1.6 that support crtbeginTS.o.