@@ -2,6 +2,14 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gcc-4.4.3-r3 (15 Apr 2010)
+*gcc-4.3.4-r3 (15 Apr 2010)
+
+  15 Apr 2010; <zorry@gentoo.org> -gcc-4.3.4-r2.ebuild,
+  +gcc-4.3.4-r3.ebuild, -gcc-4.4.3-r1.ebuild, -gcc-4.4.3-r2.ebuild,
+  +gcc-4.4.3-r3.ebuild:
+  Updated the espf-patchset to 0.3.9 on gcc 4.3.4 and gcc 4.4.3
+
 *gcc-4.4.3-r2 (11 Apr 2010)
 
   11 Apr 2010; <zorry@gentoo.org> +gcc-4.4.3-r2.ebuild:
